--- a/index.html
+++ b/index.html
@@ -6,35 +6,36 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Main</h1>
     <header>
         <div>
-            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="img/logos_11279.svg" alt="">Waxom</a>
             <nav>
                 <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a>About Us</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Shortcodes</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-            <button type="button"></button>
+            <button type="button">корзина</button>
             <form action="">
                 <input type="search">
             </form>
         </div>
         <div>
-            <button type="button"></button>
+            <button type="button">предыдущий слайд</button>
             <div> 
-                <h1></h1>
-                <span></span>
-                <p></p>
-                <a href="#" class="button"></a>
+                <h2>Portfolio PSD Template</h2>
+                <span>Unique and Modern Design</span>
+                <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
+                <a href="#" class="button">Get Started</a>
             </div>
-            <button type="button"></button>
+            <button type="button">следующий слайд</button>
             <div>
                 <button type="button"></button>
                 <button type="button"></button>
@@ -48,85 +49,85 @@
         <section>
             <h2 class="visually-hidden"></h2>
             <div>
-                <h3></h3>
-                <p></p>
+                <h3>Web & App Design</h3>
+                <p>Nam liber tempor cum soluta nobis eleifend op</p>
             </div>
             <div>
-                <h3></h3>
-                <p></p>
+                <h3>Development</h3>
+                <p> Lorem ipsum dolor sit amet, adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
             </div>
             <div>
-                <h3></h3>
-                <p></p>
+                <h3>Customization</h3>
+                <p>Text: Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.</p>
             </div>
             <div>
-                <h3></h3>
-                <p></p>
+                <h3>Marketing</h3>
+                <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.</p>
             </div>
         </section>
         <aside>
-            <h2></h2>
-            <p></p>
+            <h2>Waxom is Realization of your Ideas.</h2>
+            <p>Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
             <footer>
-                <p><span></span></p>
-                <a class="button" href="#"></a>
+                <p>Waxom Multipurpose WordPress Theme<span>Don't Forget to Rate the Template. Thanks so much!</span></p>
+                <a class="button" href="#">Purchase Now</a>
             </footer>
         </aside>
         <section>
-            <h2></h2>
-            <p></p>
+            <h2>Our Latest Projects.</h2>
+            <p>Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
             <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#">All</a></li>
+                <li><a href="#">Web Design</a></li>
+                <li><a href="#">Mobile App</a></li>
+                <li><a href="#">Illustration</a></li>
+                <li><a href="#">Photography</a></li>
             </ul>
             <div>
                 <article>
                     <figure>
-                        <img src="" alt="">
+                        <img src="img/bg_photo_1.jpg" alt="">
                     </figure>
-                    <figcaption></figcaption>
-                    <span></span>
+                    <figcaption>Claritas Etiam Processus</figcaption>
+                    <span>Photography, Nature</span>
                 </article>
                 <article>
                     <figure>
-                        <img src="" alt="">
+                        <img src="img/bg_photo2.jpg" alt="">
                     </figure>
-                    <figcaption></figcaption>
-                    <span></span>
+                    <figcaption>Quam Nutamus Farum</figcaption>
+                    <span>Graphic Design, Mock-Up</span>
                 </article>
                 <article>
                     <figure>
-                        <img src="" alt="">
+                        <img src="img/bg_photo3.jpg" alt="">
                     </figure>
-                    <figcaption></figcaption>
-                    <span></span>
+                    <figcaption>Usus Legentis Videntur</figcaption>
+                    <span>Photography, Holiday</span>
                 </article>
                 <article>
                     <figure>
-                        <img src="" alt="">
+                        <img src="img/bg_photo4.jpg" alt="">
                     </figure>
-                    <figcaption></figcaption>
-                    <span></span>
+                    <figcaption>Claritas Etiam Processus</figcaption>
+                    <span>Photography, Nature</span>
                 </article>
                 <article>
                     <figure>
-                        <img src="" alt="">
+                        <img src="img/bg_photo5.jpg" alt="">
                     </figure>
-                    <figcaption></figcaption>
-                    <span></span>
+                    <figcaption>Quam Nutamus Farum</figcaption>
+                    <span>Graphic Design, Mock-Up</span>
                 </article>
                 <article>
                     <figure>
-                        <img src="" alt="">
+                        <img src="img/bg_photo6.jpg" alt="">
                     </figure>
-                    <figcaption></figcaption>
-                    <span></span>
+                    <figcaption>Usus Legentis Videntur</figcaption>
+                    <span>Photography, Holiday</span>
                 </article>
             </div>
-            <a href="#" class="button"></a>
+            <a href="#" class="button">Load More</a>
         </section>
         <section>
             <div>
@@ -137,59 +138,68 @@
         <section>
             <h2 class="visually-hidden"></h2>
             <div>
-                <h2></h2>
-                <p></p>
+                <h2>Excellent for Mobile Devices.</h2>
+                <p>Qisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius claritas. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
                 <ul>
                     <li>
-                        <details></details>
+                        <details>Nam liber tempor cum soluta nobis eleifend option;</details>
                     </li>
                     <li>
-                        <details></details>
+                        <details>Option congue nihil imperdiet doming id quod mazim placerat facer;</details>
                     </li>
                     <li>
-                        <details></details>
+                        <details>Eodem modo typi, qui nunc nobis videntur parum futurum;</details>
                     </li>
                     <li>
-                        <details></details>
+                        <details>Investigationes demonstraverunt lectores;</details>
                     </li>
                 </ul>
             </div>
             <div>
                 <div>
-                    <p><span></span></p>
+                    <p>3587<span>Satisfied Clients</span></p>
                 </div>
                 <div>
-                    <p><span></span></p>
+                    <p>207<span>Cups of coffee</span></p>
                 </div>
                 <div>
-                    <p><span></span></p>
+                    <p>2500<span>Blog posts</span></p>
                 </div>
                 <div>
-                    <p><span></span></p>
+                    <p>873<span>Likes</span></p>
+                </div>
+                <div>
+                    <p>900<span>We launched</span></p>
                 </div>
             </div>
         </section>
         <section>
-            <h2></h2>
-            <p></p>
+            <h2>Recent Posts.</h2>
+            <p>Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
             <div>
                 <article>
-                    <figure></figure>
-                    <span></span>
-                    <p></p>
-                    <a href="#"></a>
+                    <figure>
+                        <img src="img/bg_photo_11639.jpg" alt="">
+                    </figure>
+                    <span>Lorem ipsum dolor sit amet</span>
+                    <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+                    <a href="#">Read More</a>
                 </article>
                 <article>
-                    <figure></figure>
-                    <span></span>
-                    <p></p>
-                    <a href="#"></a>
+                    <figure>
+                        <img src="img/bg_photo_11685.jpg" alt="">
+                    </figure>
+                    <span>Lorem ipsum dolor sit amet</span>
+                    <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+                    <a href="#">Read More</a>
                 </article>
                 <article>
-                    <figure></figure>
-                    <span></span>
-                    <p></p>
-                    <a href="#"></a>
+                    <figure>
+                        <img src="img/bg_photo_11718.jpg" alt="">
+                    </figure>
+                    <span>Lorem ipsum dolor sit amet</span>
+                    <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+                    <a href="#">Read More</a>
                 </article>
                 <div>
                     <button type="button"></button>
@@ -199,72 +209,73 @@
         </section>
         <section>
             <div>
-                <a href="#"><img src="" alt=""></a>
-                <a href="#"><img src="" alt=""></a>
-                <a href="#"><img src="" alt=""></a>
-                <a href="#"><img src="" alt=""></a>
+                <a href="#"><img src="img/logo_01_11138.png" alt="logo1"></a>
+                <a href="#"><img src="img/logo_02_11139.png" alt="logo2"></a>
+                <a href="#"><img src="img/logo_03_11140.png" alt="logo3"></a>
+                <a href="#"><img src="img/logo_04_11141.png" alt="logo4"></a>
             </div>
         </section>
     </main>
     <footer>
         <div>
             <article>
-                <a href="#"><img src="" alt=""></a>
-                <p></p>
-                <a href="#"></a>
+                <a href="#"><img src="img/logos_11279.svg" alt="main logo">Waxom</a>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci suscipit lobortis claritatem.;
+                    font-fam</p>
+                <a href="#">Read More</a>
             </article>
             <section>
-                <h3></h3>
+                <h3>Recent Posts</h3>
                 <ul>
                     <li>
-                        <time></time>
-                        <span></span>
+                        <time>September 08, 2015</time>
+                        <span>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</span>
                     </li>
                     <li>
-                        <time></time>
-                        <span></span>
+                        <time>September 08, 2015</time>
+                        <span>Diam nonummy nibh euismod tincidunt ut laoreet dolore magna</span>
                     </li>
                     <li>
-                        <time></time>
-                        <span></span>
+                        <time>September 08, 2015</time>
+                        <span>Claritas est etiam processus dynamicus, qui sequitur mutationem per seacula quarta decima</span>
                     </li>
                 </ul>
             </section>
             <section>
-                <h3></h3>
+                <h3>Our Twitter</h3>
                 <ul>
                     <li>
-                        <span></span>
-                        <time></time>
+                        <span>@waxom Cum soluta nobis eleifend option congue nihil imperdiet doming</span>
+                        <time>3 mins ago</time>
                     </li>
                     <li>
-                        <span></span>
-                        <time></time>
+                        <span>Mirum est #envato notare quam littera gothica, quam nunc putamus parum anteposuerit litterarum</span>
+                        <time>5 hours ago</time>
                     </li>
                     <li>
-                        <span></span>
-                        <time></time>
+                        <span>Soluta nobis option bit.ly/1Hniso7</span>
+                        <time>20 days ago</time>
                     </li>
                 </ul>
             </section>
             <section>
-                <h3></h3>
-                <a href="#"><img src="" alt=""></a>
-                <a href="#"><img src="" alt=""></a>
-                <a href="#"><img src="" alt=""></a>
-                <a href="#"><img src="" alt=""></a>
+                <h3>Dribbble Widget</h3>
+                <a href="#"><img src="img/bg_photo_8842.jpg" alt=""></a>
+                <a href="#"><img src="img/bg_photo_9778.jpg" alt=""></a>
+                <a href="#"><img src="img/bg_photo_9781.jpg" alt=""></a>
+                <a href="#"><img src="img/bg_photo_9784.jpg" alt=""></a>
             </section>
         </div>
         <div>
             <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#">Copyright © 2015 Waxom</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Support</a></li>
             </ul>
             <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#">Designed by ThemeFire</a></li>
+                <li><a href="#">Only on Envato Market</a></li>
             </ul>
         </div>
     </footer>
