подключила шрифты, указала размер для контентных изображений

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Main</h1>
     <header>
         <div>
-            <a href=""><img src="img/logos_11279.svg" alt="">Waxom</a>
+            <a href=""><img width="64" height="56" src="img/logos_11279.svg" alt="logo">Waxom</a>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -86,42 +87,42 @@
             <div>
                 <article>
                     <figure>
-                        <img src="img/bg_photo_1.jpg" alt="">
+                        <img width="370" height="237" src="img/bg_photo_1.jpg" alt="">
                     </figure>
                     <figcaption>Claritas Etiam Processus</figcaption>
                     <span>Photography, Nature</span>
                 </article>
                 <article>
                     <figure>
-                        <img src="img/bg_photo2.jpg" alt="">
+                        <img width="370" height="237" src="img/bg_photo2.jpg" alt="">
                     </figure>
                     <figcaption>Quam Nutamus Farum</figcaption>
                     <span>Graphic Design, Mock-Up</span>
                 </article>
                 <article>
                     <figure>
-                        <img src="img/bg_photo3.jpg" alt="">
+                        <img width="370" height="237" src="img/bg_photo3.jpg" alt="">
                     </figure>
                     <figcaption>Usus Legentis Videntur</figcaption>
                     <span>Photography, Holiday</span>
                 </article>
                 <article>
                     <figure>
-                        <img src="img/bg_photo4.jpg" alt="">
+                        <img width="370" height="237" src="img/bg_photo4.jpg" alt="">
                     </figure>
                     <figcaption>Claritas Etiam Processus</figcaption>
                     <span>Photography, Nature</span>
                 </article>
                 <article>
                     <figure>
-                        <img src="img/bg_photo5.jpg" alt="">
+                        <img width="370" height="237" src="img/bg_photo5.jpg" alt="">
                     </figure>
                     <figcaption>Quam Nutamus Farum</figcaption>
                     <span>Graphic Design, Mock-Up</span>
                 </article>
                 <article>
                     <figure>
-                        <img src="img/bg_photo6.jpg" alt="">
+                        <img width="370" height="237" src="img/bg_photo6.jpg" alt="">
                     </figure>
                     <figcaption>Usus Legentis Videntur</figcaption>
                     <span>Photography, Holiday</span>
@@ -179,7 +180,7 @@
             <div>
                 <article>
                     <figure>
-                        <img src="img/bg_photo_11639.jpg" alt="">
+                        <img width="370" height="220" src="img/bg_photo_11639.jpg" alt="">
                     </figure>
                     <span>Lorem ipsum dolor sit amet</span>
                     <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
@@ -187,7 +188,7 @@
                 </article>
                 <article>
                     <figure>
-                        <img src="img/bg_photo_11685.jpg" alt="">
+                        <img width="370" height="220" src="img/bg_photo_11685.jpg" alt="">
                     </figure>
                     <span>Lorem ipsum dolor sit amet</span>
                     <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
@@ -195,7 +196,7 @@
                 </article>
                 <article>
                     <figure>
-                        <img src="img/bg_photo_11718.jpg" alt="">
+                        <img width="370" height="220" src="img/bg_photo_11718.jpg" alt="">
                     </figure>
                     <span>Lorem ipsum dolor sit amet</span>
                     <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
@@ -209,17 +210,17 @@
         </section>
         <section>
             <div>
-                <a href="#"><img src="img/logo_01_11138.png" alt="logo1"></a>
-                <a href="#"><img src="img/logo_02_11139.png" alt="logo2"></a>
-                <a href="#"><img src="img/logo_03_11140.png" alt="logo3"></a>
-                <a href="#"><img src="img/logo_04_11141.png" alt="logo4"></a>
+                <a href="#"><img width="210" height="127" src="img/logo_01_11138.png" alt="logo1"></a>
+                <a href="#"><img width="210" height="210" src="img/logo_02_11139.png" alt="logo2"></a>
+                <a href="#"><img width="210" height="130" src="img/logo_03_11140.png" alt="logo3"></a>
+                <a href="#"><img width="210" height="164" src="img/logo_04_11141.png" alt="logo4"></a>
             </div>
         </section>
     </main>
     <footer>
         <div>
             <article>
-                <a href="#"><img src="img/logos_11279.svg" alt="main logo">Waxom</a>
+                <a href="#"><img width="64" height="56" src="img/logos_11279.svg" alt="main logo">Waxom</a>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci suscipit lobortis claritatem.;
                     font-fam</p>
                 <a href="#">Read More</a>
@@ -260,10 +261,10 @@
             </section>
             <section>
                 <h3>Dribbble Widget</h3>
-                <a href="#"><img src="img/bg_photo_8842.jpg" alt=""></a>
-                <a href="#"><img src="img/bg_photo_9778.jpg" alt=""></a>
-                <a href="#"><img src="img/bg_photo_9781.jpg" alt=""></a>
-                <a href="#"><img src="img/bg_photo_9784.jpg" alt=""></a>
+                <a href="#"><img width="130" height="98" src="img/bg_photo_8842.jpg" alt=""></a>
+                <a href="#"><img width="130" height="98" src="img/bg_photo_9778.jpg" alt=""></a>
+                <a href="#"><img width="130" height="98" src="img/bg_photo_9781.jpg" alt=""></a>
+                <a href="#"><img width="130" height="98" src="img/bg_photo_9784.jpg" alt=""></a>
             </section>
         </div>
         <div>
