стилизация первого блока

--- a/index.html
+++ b/index.html
@@ -52,17 +52,31 @@
             </form>
         </div>
         <div class="slider">
-            <button class="button-back" type="button">предыдущий слайд</button>
+            <button class="slider-button" type="button">
+                <svg class="slider-buttton--back" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                    width="42" height="75"  viewBox="0 0 42 75">
+                    <path d="M39.02597,73.97943 C39.02597,73.97943 1.0048065,37.498016 1.0048065,37.498016 C1.0048065,37.498016 39.02597,1.01828 39.02597,1.01828 C39.02597,1.01828 40.99504,3.0219421 40.99504,3.0219421 C40.99504,3.0219421 5.065979,37.498016 5.065979,37.498016 C5.065979,37.498016 40.99504,71.97656 40.99504,71.97656 C40.99504,71.97656 39.02597,73.97943 39.02597,73.97943 Z"/>
+                </svg>
+                <span class="visually-hidden">previous slide</span>
+            </button>
             <div class="slider__text"> 
-                <h2 class="">Portfolio PSD Template</h2>
-                <span class="">Unique and Modern Design</span>
+                <p class="slider-text__header">Portfolio PSD Template</p>
+                <span>Unique and Modern Design</span>
                 <p class="">Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
-                <a class="" href="#" class="button">Get Started</a>
+                <a class="button" href="#" class="button">Get Started</a>
             </div>
-            <button class="button-next" type="button">следующий слайд</button>
+            <button class="slider-button" type="button">
+                <svg class="slider-buttton--next" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                    width="42" height="75"  viewBox="0 0 42 75">
+                    <path d="M39.02597,73.97943 C39.02597,73.97943 1.0048065,37.498016 1.0048065,37.498016 C1.0048065,37.498016 39.02597,1.01828 39.02597,1.01828 C39.02597,1.01828 40.99504,3.0219421 40.99504,3.0219421 C40.99504,3.0219421 5.065979,37.498016 5.065979,37.498016 C5.065979,37.498016 40.99504,71.97656 40.99504,71.97656 C40.99504,71.97656 39.02597,73.97943 39.02597,73.97943 Z"/>
+                </svg>
+                <span class="visually-hidden">next slide</span>
+            </button>
             <div class="pagination">
                 <button class="pagination-button" type="button"></button>
-                <button class="pagination-button" type="button"></button>
+                <button class="pagination-button pagination-button--active" type="button"></button>
                 <button class="pagination-button" type="button"></button>
                 <button class="pagination-button" type="button"></button>
                 <button class="pagination-button" type="button"></button>
