--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@
         </section>
         <section class="bg-video">
             <h2 class="visually-hidden">promo-video</h2>
-            <video class="bg-video__file" width="400" height="300" loop muted src="video/pexels-videos4335.mp4" poster="img/video-banner.jpg">
+            <video class="bg-video__file video-play" id="video" width="400" height="300" loop muted src="video/pexels-videos4335.mp4" poster="img/video-banner.jpg">
                 Тег video не поддерживается вашим браузером. <a href="video/pexels-videos4335.mp4">Скачайте видео</a>
             </video>
-            <div class="bg-video__text">
-                <button class="wrapper--video-button">
+            <div class="bg-video__text ">
+                <button class="wrapper--video-button video-play-btn" id="video-button" >
                     <svg xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink"
                         width="80" height="76"  viewBox="0 0 80 76">
@@ -477,5 +477,8 @@
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
+    </script>
+    <script src="java.js"></script>
 </body>
 </html>
