добавляет эффект наведения на ссылки в подвале

--- a/index.html
+++ b/index.html
@@ -460,10 +460,22 @@
                 <section class="widgets">
                     <h3 class="widgets__title">Dribbble Widget</h3>
                     <div class="widgets-container">
-                        <a class="widgets__link" href="#"><img class="widgets__pic" width="130" height="98" src="img/bg_photo_8842.jpg" alt="widget 1"></a>
-                        <a class="widgets__link" href="#"><img class="widgets__pic" width="130" height="98" src="img/bg_photo_9778.jpg" alt="widget 2"></a>
-                        <a class="widgets__link" href="#"><img class="widgets__pic" width="130" height="98" src="img/bg_photo_9781.jpg" alt="widget 3"></a>
-                        <a class="widgets__link" href="#"><img class="widgets__pic" width="130" height="98" src="img/bg_photo_9784.jpg" alt="widget 4"></a>
+                        <a class="widgets__link" href="#">
+                            <div class="widgets-hover"></div>
+                            <img class="widgets__pic" width="130" height="98" src="img/bg_photo_8842.jpg" alt="widget 1">
+                        </a>
+                        <a class="widgets__link" href="#">
+                            <div class="widgets-hover"></div>
+                            <img class="widgets__pic" width="130" height="98" src="img/bg_photo_9778.jpg" alt="widget 2">
+                        </a>
+                        <a class="widgets__link" href="#">
+                            <div class="widgets-hover"></div>
+                            <img class="widgets__pic" width="130" height="98" src="img/bg_photo_9781.jpg" alt="widget 3">
+                        </a>
+                        <a class="widgets__link" href="#">
+                            <div class="widgets-hover"></div>
+                            <img class="widgets__pic" width="130" height="98" src="img/bg_photo_9784.jpg" alt="widget 4">
+                        </a>
                     </div>
                 </section>
             </div>
