сделала бургер меню и предыдущие изменения не помню какие

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 </svg>
                 Waxom
             </a>
+            <label class="burger-menu" for="burger-menu"><span></span></label>
+            <input type="checkbox" id="burger-menu">
             <nav class="main-nav">
                 <ul class="main-nav__list">
                     <li class="main-nav__item"><a class="main-nav__link" href="#">Home</a></li>
