--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="cards-wrapper">
                 <article class="projects__card">
                     <h2 class="visually-hidden">first project</h2>
-                    <a href="#">
+                    <div>
                         <img class="card__pic" width="370" height="237" src="img/bg_photo_1.jpg" alt="post 1">
                         <div class="projects__card--hover">
                             <a class="hover-button hover-link" href="#" aria-label="link button"></a>
@@ -165,11 +165,11 @@
                             <span class="card-title">Claritas Etiam Processus</span>
                             <span class="card-text">Photography, Nature</span>
                         </p>
-                    </a>
+                    </div>
                 </article>
                 <article class="projects__card">
                     <h2 class="visually-hidden">second project</h2>
-                    <a href="#">
+                    <div>
                         <img class="card__pic" width="370" height="237" src="img/bg_photo2.jpg" alt="post 2">
                         <div class="projects__card--hover">
                             <a class="hover-button hover-link" href="#" aria-label="link button"></a>
@@ -179,11 +179,11 @@
                             <span class="card-title">Quam Nutamus Farum</span>
                             <span class="card-text">Graphic Design, Mock-Up</span>
                         </p>
-                    </a>
+                    </div>
                 </article>
                 <article class="projects__card">
                     <h2 class="visually-hidden">third project</h2>
-                    <a href="#">
+                    <div>
                         <img class="card__pic" width="370" height="237" src="img/bg_photo3.jpg" alt="post 3">
                         <div class="projects__card--hover">
                             <a class="hover-button hover-link" href="#" aria-label="link button"></a>
@@ -193,11 +193,11 @@
                             <span class="card-title">Usus Legentis Videntur</span>
                             <span class="card-text">Photography, Holiday</span>
                         </p>
-                    </a>
+                    </div>
                 </article>
                 <article class="projects__card">
                     <h2 class="visually-hidden">forth project</h2>
-                    <a href="#">
+                    <div>
                         <img class="card__pic" width="370" height="237" src="img/bg_photo4.jpg" alt="post 4">
                         <div class="projects__card--hover">
                             <a class="hover-button hover-link" href="#" aria-label="link button"></a>
@@ -207,11 +207,11 @@
                             <span class="card-title">Claritas Etiam Processus</span>
                             <span class="card-text">Photography, Nature</span>
                         </p>
-                    </a>
+                    </div>
                 </article>
                 <article class="projects__card">
                     <h2 class="visually-hidden">fifth project</h2>
-                    <a href="#">
+                    <div>
                         <img class="card__pic" width="370" height="237" src="img/bg_photo5.jpg" alt="post 5">
                         <div class="projects__card--hover">
                             <a class="hover-button hover-link" href="#" aria-label="link button"></a>
@@ -221,11 +221,11 @@
                             <span class="card-title">Quam Nutamus Farum</span>
                             <span class="card-text">Graphic Design, Mock-Up</span>
                         </p>
-                    </a>
+                    </div>
                 </article>
                 <article class="projects__card">
                     <h2 class="visually-hidden">sixth project</h2>
-                    <a href="#">
+                    <div>
                         <img class="card__pic" width="370" height="237" src="img/bg_photo6.jpg" alt="post 6">
                         <div class="projects__card--hover">
                             <a class="hover-button hover-link" href="#" aria-label="link button"></a>
@@ -235,7 +235,7 @@
                             <span class="card-title">Usus Legentis Videntur</span>
                             <span class="card-text">Photography, Holiday</span>
                         </p>
-                    </a>
+                    </div>
                 </article>
             </div>
             <a class="button" href="#">Load More</a>
